Fix spacing for shopify

--- a/theme-extension-src/assets/app.css
+++ b/theme-extension-src/assets/app.css
@@ -167,6 +167,8 @@ body > main {
 belt-wizard {
   flex-grow: 1;
   margin-inline: 8px;
+      max-width: 1200px;
+        margin: 0 auto;
 }
 
 /* Stepper */
